# osu-mirror-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
frontend/: index.html  package.json
frontend/src/: config.ts  index.css  main.tsx
frontend/src/components/: BeatmapCard.tsx  BeatmapOverlay.tsx  layout.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AboutPage.tsx  BeatmapsPage.tsx  DMCAPage.tsx  ErrorPage.tsx  NotFoundPage.tsx
migrations/: 20251201000000_init.sql
src/: config.rs  error.rs  main.rs
src/api/: download.rs  health.rs  mod.rs  routes.rs
src/api/docs/: openapi.rs
src/api/v1/: beatmaps.rs  beatmapset.rs  mapping.rs  mod.rs  routes.rs  search.rs
src/api/v2/: beatmapset.rs  mapping.rs  mod.rs  routes.rs  search.rs
src/crawler/: client.rs  mod.rs  scheduler.rs  sync.rs
src/db/: models.rs  pool.rs  queries.rs
src/middleware/: rate_limit.rs
src/storage/: local.rs  mod.rs  s3.rs
